--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "varuint"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Artem Shein <sc-github@aisys.ru>"]
 
 description = "Variable length signed and unsigned integer types"
 repository = "https://github.com/artemshein/varuint"
-categories = ["data-structures"]
+categories = ["data-structures", "encoding", "compression"]
 license = "MIT"
