--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "varuint"
-version = "0.5.1"
+version = "0.6.0"
 authors = ["Artem Shein <sc-github@aisys.ru>"]
+edition = "2018"
 
 description = "Variable length signed and unsigned integer types"
 repository = "https://github.com/artemshein/varuint"
